fix core card list overflow + update account page
*fix overflow y missing on core card list
*change edit button by save button for username and password form
* keep license key form even if pro to update or disable key at same place

--- a/src/ui/styles.css
+++ b/src/ui/styles.css
@@ -339,7 +339,7 @@
 }
 
 .core-card-list {
-  @apply ml-2 mr-2 mb-2 mt-2 h-fit content-start md:col-span-6 overflow-hidden grid grid-cols-12 max-h-100 sm:max-h-125 col-span-12 p-4 relative break-words dark:brightness-110 bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border;
+  @apply ml-2 mr-2 mb-2 mt-2 h-fit content-start md:col-span-6 overflow-x-hidden overflow-y-auto grid grid-cols-12 max-h-100 sm:max-h-125 col-span-12 p-4 relative break-words dark:brightness-110 bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border;
 }
 
 .w-small.core-card-list {
